# ComfyUI-IC-Light-Native

./: README.md  __init__.py  convert_weights.py  ic_light_nodes.py  node_requirements.txt  pyproject.toml
examples/: fg.json  fg_bg_combine.json  fg_lightmap.json  ic_light_detail_transfer.json  ic_light_preserve_color.json
locales/en/: nodeDefs.json
locales/fr/: nodeDefs.json
locales/ja/: nodeDefs.json
locales/ko/: nodeDefs.json
locales/ru/: nodeDefs.json
locales/zh/: nodeDefs.json
